--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "app-root-path": "^3.0.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "cross-env": "^7.0.2",
+    "html-webpack-plugin": "^4.5.0",
+    "serve": "^11.3.2",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "serve": "serve \"./dist\" -s"
   },
   "repository": {
     "type": "git",
