--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "@babel/register": "^7.11.5",
     "app-root-path": "^3.0.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
+    "clean-webpack-plugin": "^1.0.1",
     "cross-env": "^7.0.2",
+    "css-loader": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.0.0",
     "serve": "^11.3.2",
+    "style-loader": "^2.0.0",
     "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "scripts": {
-    "build": "webpack",
-    "serve": "serve \"./dist\" -s"
+    "start": "node \"./scripts/webpack/start.js\"",
+    "build": "node \"./scripts/webpack/build.js\"",
+    "serve": "serve \"./build\" -s"
   },
   "repository": {
     "type": "git",
